# gra

./: install  pe_lvk.py  pyproject.toml
examples/: 2mass_download.sh  catalog_analysis.sh  injection_catalog.sh
src/gra/: __init__.py  cli.py  data.py  data_lvk.py  pe_lvk.py  plots.py
src/gra/likelihoodloader/: pyproject.toml
src/gra/likelihoodloader/src/likelihoodloader/: __init__.py  io.py  lvk.py
tests/: test_cli.py  test_data.py  test_data_lvk.py
