[project]
name = "gra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Otto Akseli Hannuksela", email = "otto.akseli.hannuksela@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "gwosc>=0.8.1",
    "gwpy>=3.0.14",
    "ipython>=9.9.0",
    "numpy>=2.4.1",
    "typer>=0.21.1",
]

[project.scripts]
gra = "gra.cli:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
